--- a/royallux/royallux_gui/src/assets/css/style.css
+++ b/royallux/royallux_gui/src/assets/css/style.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Racing+Sans+One&display=swap');
 *, ::before, ::after {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Racing Sans One', cursive;
 }
 body{
     text-align: center;
