--- a/API/static/CSS/style.css
+++ b/API/static/CSS/style.css
@@ -1,5 +1,34 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: darkslategray;
+}
+
+h1 {
+  text-align: center;
+  color: #fff;
+}
+
+h2 {
+  text-align: center;
+  color: #0C0C0F;
+}
+
+.tablecon {
+  display: flex;
+  justify-content: center;
+}
+
+.heading {
+  width: 300px;
+  text-align: center;
+}
+
+
+.tableRows {
+    text-align: center;
 }
