--- a/royallux/royallux_gui/src/assets/css/style.css
+++ b/royallux/royallux_gui/src/assets/css/style.css
@@ -1,12 +1,12 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Racing+Sans+One&display=swap'); */
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
-*, ::before, ::after {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    /* font-family: 'Racing Sans One', cursive; */
-    font-family: 'Playfair Display', serif;
+@import url("https://fonts.googleapis.com/css2?family=Arapey&display=swap");
+*,
+::before,
+::after {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Arapey", serif;
 }
-body{
-    text-align: center;
+body {
+  text-align: center;
 }
